--- a/styles.css
+++ b/styles.css
@@ -156,12 +156,13 @@ footer {
     display: block;
     position: absolute;
     top: 70px;
-    right: -100%;
+    right: 0;
     height: 100%;
     overflow-y: hidden;
     background-color: #260000;
     z-index: 2;
     transition: 1s ease;
+    max-width: 0;
     width: 100%;
 }
 
