--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ li {
 }
 
 .header-container {
-    width: 960px;
+    max-width: 960px;
     display: flex;
     justify-content: flex-start;
 }
@@ -241,7 +241,7 @@ footer {
 }
 
 .container {
-    width: 960px;
+    max-width: 960px;
 }
 
 main {
@@ -402,6 +402,8 @@ section {
     line-height: 40px;
     margin-left: 5px;
 }
+
+
 
 
 
